css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans',sans-serif;
}

.clearfix::after{
    content: "";
    display: table;
    clear: both;
}

/********************************************************
* DEBUG *
*********************************************************/
.debug .navmenu{
    height: 100px;
    background: aqua;
}
.debug .jumbotron{
    height: 100%;
    background: cadetblue;
}
.debug h1{
    height: 100px;
    background: rgba(0, 0, 0, 0.5);
}
.debug h2{
    height: 70px;
    background: rgba(30, 34, 54, 0.5);
}
.debug h3{
    height: 50px;
    background: rgba(63, 32, 66, 0.5);
}
.debug .freetry_content{
    height:300px;
    background: chocolate;
}
.debug .hero_img{
    height: 530px;
    background: darkcyan;
}
.debug .billing{
    height:50px;
    background:darkgray;
}
.debug .col_30{
    height: 500px;
    background:coral;
}
.debug .plans .col_30{
    height:900px;
    background:darkkhaki;
}
.debug .card_pro{
    height:300px;
    background:rgb(245, 232, 48);
}
.debug .partner>img{
    height: 500px;
    background:darkturquoise;
}
.debug .partner>div{
    height: 500px;
    background: chocolate;
}
.debug .more{
    height: 1rem;
    background:darkblue;
    display: block;
}
.debug .teams>.clearfix>div{
    height: 700px;
    background:darkgoldenrod;
    border: 1px solid red;
}
.debug .square{
    background:darkorchid;
    border: 1px solid burlywood;
}
.debug .cta{
    height: 400px;
}
.debug .cta>div{
    height:200px;
    background: chartreuse;
}
.debug .question{
    height: 100px;
    background: brown;
}

.debug .f_col{
    height: 400px;
    background: rosybrown;
}
.debug .lang{
    height: 200px;
    background: blueviolet;
}


/********************************************************
* UTILITY *
*********************************************************/
.container_80{
    width: 80%;
    margin: auto;
}
.container_70{
    width: 70%;
    margin: auto;
}
/* .container_70>section:not(.teams){
    width: 70%;
    margin: auto;
} */ /* too specific, margin:auto conflict with .m_topbot inside sections. can't find a way to override it. */
.m_topbot{
    margin: 5% 0;
}
.pad_topbot{
    padding: 10% 0;
}
.w_50{
    width:50%;
}
div[class^="col_"]{
    float:left;
}
.col_50{
    width:50%;
}
.col_45{
    width:45%;
}
.col_30{
    width: 30%;
}

/********************************************************
* COMMON *
*********************************************************/
section.teams{
    margin: 0;
}


/********************************************************
* HEADER *
*********************************************************/
/* navbar */

/* hero section  */
/* .hero{
    background-size: 100% 50%;
    background-color: darkslategray; /* finding a way to shrink (only) the background
} */
.jumbotron > .container_80{
    padding: 3rem 0;
}
.freetry_content{
    float:left;
    width: 20%;
}
.hero_img{
    float:left;
    width:80%;
}

/********************************************************
* MAIN *
*********************************************************/
.plans{
    margin: 10% 0;
}
/* billing plans section (1) */
.col_30:nth-child(2){
    margin: auto 5%;
}

/* partner section (2) */
.partner > img{
    margin-right: 5%;
}

/* features section (3) */
    /* EMPTY */
/* teams section (4) */
.brands_container{
    float:left;
    width:30%;
}
.focus_brand{
    float:left;
    width:40%;
}
.square{
    float:left;
    height: 50%;
    width: 50%;
    padding: 5%;
}

/* cta section (4) */
.cta{
    background-color: cadetblue;
    position:relative;
}
.cta>div{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}
.cta .red_txt{
    position:absolute;
    top:0;
    left:0;
    width: 40%;
}
.cta .btn{
    position:absolute;
    top:0;
    right:0;
}

/* frequently asked section (4) */
.frequently_asked > h2{
    margin-bottom: 4rem;
}
.frequently_asked > .question{
    border-top: 2px solid black;
    padding: 1rem 0;
    position:relative;
}
.frequently_asked > .question:last-child{
    border-bottom: 2px solid black;
}
.question > h3{
    display: inline-block;
    max-width:90%;
}
.question > i {
    display:inline-block;
}

/********************************************************
* FOOTER *
*********************************************************/
#site_footer{
    background: black;
}
.f_col{
    float:left;
    width: 15%;
    margin-right: 5%;
}
.lang{
    display: inline-block;
}
.lang > span{
    line-height: 100%;
}

